# loss-fraction

./: .gitignore  CMakeLists.txt  README.md  lost-fraction.cc  readme.md
app/: loss-fraction.cc  lost-fraction.cc
